<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/bnHome"
        android:title="@string/home"
        android:icon="@drawable/ic_outline_home_24" />

    <item
        android:id="@+id/bnTrack"
        android:title="@string/tracks"
        android:icon="@drawable/ic_outline_music_note_24" />

    <item
        android:id="@+id/bnAlbum"
        android:title="@string/albums"
        android:icon="@drawable/ic_outline_album_24" />

    <item
        android:id="@+id/bnPlaylist"
        android:title="@string/playlists"
        android:icon="@drawable/ic_outline_playlist_play_24" />

    <item
        android:id="@+id/bnSpotifyFav"
        android:title="@string/spotify"
        android:icon="@drawable/ic_spotify_favourite_heart_24px" />

</menu>